--- a/issue4/article05/2019-02-20.mdx
+++ b/issue4/article05/2019-02-20.mdx
@@ -75,7 +75,7 @@ export function Name({ author, affil, email }) {
 			<strong>Keywords:</strong>
 			<i>
 				{' '}
-				motorial music, rhythmic, rhythm, perception of music, Eurhythmics.
+				motorial music, rhythmic, rhythm, perception of music, Eurhythmics
 			</i>
 		</div>
 	</div>
@@ -85,7 +85,6 @@ export function Name({ author, affil, email }) {
 
 <div className='text'>
 
-<Gallery images={[{ src: '../p1.png', alt: 'Picture 13.' }]} />
 
 ## Wprowadzenie
 
@@ -191,169 +190,49 @@ Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują r
 - Dwie wykonawczynie symbolizują dwa różne rejestry wiolonczeli. Użyty rekwizyt – maska – scala i jednoczy je w ruchu (Zdjęcie 11-12).
 - Wykorzystane w interpretacji ruchowej kostiumy nawiązują do quasi-barokowej maniery, w której kompozytor napisał utwór. Natomiast krzesła stanowią ruchomy element scenografii (Zdjęcie 13).
 
-<div className='imageGallery'>
+<Gallery />
 
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p1.jpg').default}
-			alt='Picture 1.'
-		/>
-		<figcaption>
-			**Zdjęcia 1.** W. Kilar, Bitwa. (Autor: Przemysław Gabryel)
-		</figcaption>
-	</figure>
+## ​Rola interpretacji ruchowych ​w procesie upowszechniania muzyki
+
+Nieocenionym narzędziem w procesie popularyzacji muzyki są Koncerty Interpretacji Ruchowych Muzyki, Koncerty Choreografii Muzyki, Koncerty z cyklu Muzyka – Ruch – Przestrzeń, koncerty zatytułowane Zobaczyć muzykę, Usłyszeć obraz itd. Różnorodność nazw koncertów nie wyklucza jednej głównej idei tego typu wydarzeń artystycznych. W tym samym czasie na scenie rozbrzmiewa muzyka, a jej wizualizację przestawiają na żywo ekspresyjnym ruchem wykonawcy. Coraz śmielej od wielu lat promowana jest w ten sposób muzyka współczesna ze swoim bogactwem brzmieniowym. Koncerty środowiskowe dla dzieci, młodzieży, seniorów, koncerty w ramach akademii dziecięcych, koncerty w ramach festiwali nauki, koncerty w salach koncertowych dla melomanów, koncerty w ramach sesji naukowych, kongresów, seminariów, odbywających się w Polsce i za granicą, dają ogromną szansę poznania publiczności szerokiego spektrum dzieł muzycznych w wymiarze ruchowym.
+
+_________________
+
+## ​Podsumowanie
+
+Zaproponowana przez Emila Jaques-Dalcroz’a na początku XX wieku wszechstronna metoda edukacji artystycznej – prowadzi do harmonijnego rozwoju człowieka poprzez ruch. Związane z nią integralnie interpretacje ruchowe muzyki stanowią czytelną i ciekawą propozycję poznawania muzyki. Istota interpretacji ruchowej - synteza muzyki i ruchu zaplanowanego w przestrzeni odwołuje się do współczesnych wyznaczników kontemplacji sztuki. Dlatego też – autorka pragnie podkreślić te słowa z wielką determinacją: Nie bójmy się tworzyć artystycznych wizji muzyki w ruchu i przestrzeni, naznaczonych cechą indywidualności, ponieważ to właśnie interpretacje ruchowe muzyki są doskonałym sposobem percepcji dzieła muzycznego, który prowadzi zarówno wykonawców, jak i odbiorców do świata muzyki.
+
+
+_________________
+
+## References
+
+<div className='references'>
+
+1. Appia, A. 1974. _Dzieło sztuki żywej i inne prace_. Wydawnictwo Artystyczne i Filmowe. Warszawa.
+2. Bader, R. 2013. _Nonlinearities and Synchronization in Musical Acoustics and Music Psychology_. Current Research in Systematic Musicology. Issue/Vol. 2. Edited by Bader, Rolf, Leman, Marc, Godoy, Rolf-Inge. Berlin Heidelberg: Springer. ISBN/ISSN: 978-3-642-36098
+3. Brzozowska-Kuczkiewicz. M. 1991. _Emil Jaques-Dalcroze i jego Rytmika_. Warszawa: WSiP.
+4. Dalcroze, E. Jaques. 1992. _Pisma wybrane_. M. Bogdan and B. Wakar, compilers. Warszawa: WSiP.
+5. Dalcroze, E. J. 2000. _Rhythm, Music, Education_. Translated from the French by Harold F. Rubenstein. Published by The Dalcroze Society (Inc), 5th Edition 2000.
+6. Franklin, E.N. 2007. _Świadomość ciała. Wykorzystanie obrazów mentalnych w pedagogice ruchu_. Warszawa: Wydawnictwo Kined.
+7. Galikowska-Gajewska, A. 2010. "Utwory solowe jako źródło inspiracji w tworzeniu interpretacji ruchowych muzyki." _Sztuka, Kultura, Edukacja, Rocznik Naukowy nr 1 (2010): 46_. Gdańsk: Wydział Dyrygentury Chóralnej, Edukacji Muzycznej i Rytmiki, Wydawnictwo Akademii Muzycznej im C w Gdańsku. [The department of choral conducting, music education and rhythmicity.]
+8. ____. 2012. _Brzmienie w interpretacjach ruchowych utworu muzycznego, Debussy, Cage, Penderecki, Szalonek, Dobrowolski, Olczak, Kaiser_. Gdańsk: Akademia Muzyczna im. S. Moniuszki w Gdańsku, Gdańsk.
+9. ____. 2015. "Rytmika jako sposób na poprawę jakości funkcjonowania człowieka we współczesnym świecie." In _Człowiek w obliczy kryzysu. Kryzys w perspektywie interdyscyplinarnej_, ed. Aliny Chyczewskiej and Iwony Marii Kijowskiej, 226. Elbląg: Wydawnictwo Państwowej Wyższej Szkoły Zawodowej w Elblągu [Publishers of a State Higher Professional School in Elblag].
+10. Gerhardt – Punicka, J. 1963. "Plastyka w metodzie Dalcroze’a." In _Materiały pomocnicze COPSA_. Warszawa 1963 (book no. 71): 79.
+11. Levitin, D. S. 2006._ This is your brain in music: the science of a human obsession_. Dulton, NY.
+12. Mieczyńska-Lewakowska, J. 1993. _Fakty i ludzie z mego życia_. [Facts and people from my life.] Łódź: Zarząd Miasta Łodzi.
+13. Picq, L. and P. Vayer. 1970. _Education psychomotrice (Kształcenie psychomotoryczne)_. Ed. Doin 1970.
+14. Porte, D. 1974. "Podstawy metody Jaques-Dalcroze’a" [Les bases de la Méthode Jaques-Dalcroze]. _Le Rythme, czerwiec [june]1974_.
+15. ____. 1975. "Podstawy metody Jaques-Dalcroze’a" [Les bases de la Méthode Jaques-Dalcroze].Translated by B. Niewiadomska. In _Materiały Informacyjno-Dyskusyjne COPSA z. 162:117_. Warszawa 1975.
+16. Skazińska, M. 1989. "Znaczenie interpretacji ruchowej utworów muzycznych w kształceniu nauczycieli rytmiki." In _Zeszyt Naukowy Akademii Muzycznej w Łodzi, materiały z 12 sesji, nr XVIII, 215. Łódź 1989_.
+17. Stevenson, R. 2011. "The Principles of a Jaques-Dalcroze Education." [online]. [dostęp [acc.]: 14 grudnia 2011]. Dostępny w Internecie. [summerdalcroze]​(http://www.summerdalcroze.com/html/articles)
+
+
+
 </div>
 
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p2.jpg').default}
-			alt='Picture 2.'
-		/>
-		<figcaption>
-			**Zdjęcie 2.** W. Kilar, Bitwa. (Autor: Przemysław Gabryel)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p3.jpg').default}
-			alt='Picture 3.'
-		/>
-		<figcaption>
-			**Zdjęcie 3.** W. Kilar, Mrówki. (Autor: Przemysław Gabryel)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p4.jpg').default}
-			alt='Picture 4.'
-		/>
-		<figcaption>
-			**Zdjęcie 4.** Betelehemu, kolęda z Nigerii. (Autor: Przemysław Gabryel)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p5.jpg').default}
-			alt='Picture 5.'
-		/>
-		<figcaption>
-			**Zdjęcie 5.** J.S.Bach, Badinerie z II suity orkiestrowej h –moll.
-			(Autor: Przemysław Gabryel)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p6.jpg').default}
-			alt='Picture 6.'
-		/>
-		<figcaption>
-			**Zdjęcie 6.** J. Cage, Our Spring Will Come. (Autor: Piotr Rodak)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p7.jpg').default}
-			alt='Picture 7.'
-		/>
-		<figcaption>
-			**Zdjęcie 7.** K. Penderecki, Anaklasis. (Autor: Piotr Rodak)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p8.jpg').default}
-			alt='Picture 8.'
-		/>
-		<figcaption>
-			**Zdjęcie 8.** A. Dobrowolski, Krabogapa. (Autor: Piotr Rodak)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p9.jpg').default}
-			alt='Picture 9.'
-		/>
-		<figcaption>
-			**Zdjęcie 9.** K. Olczak, Trio hommage á Karol Szymanowski. (Autor: Piotr
-			Rodak)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p10.jpg').default}
-			alt='Picture 10.'
-		/>
-		<figcaption>
-			**Zdjęcie 10.** T. Kaiser, Dinosaur Bones. (Autor: Piotr Rodak).
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p11.jpg').default}
-			alt='Picture 11.'
-		/>
-		<figcaption>
-			**Zdjęcie 11.** H. H. Jabłoński, Capriccio no 1 for cello solo. (Autor:
-			Sylwia Holeksa-Wilkowska)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p12.jpg').default}
-			alt='Picture 12.'
-		/>
-		<figcaption>
-			**Zdjęcie 12.** H. H. Jabłoński, Capriccio no 1 for cello solo. (Autor:
-			Sylwia Holeksa-Wilkowska)
-		</figcaption>
-	</figure>
-</div>
-
-<div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue4/article05/p13.jpg').default}
-			alt='Picture 13.'
-		/>
-		<figcaption>
-			**Zdjęcie 13.** P. Mykietyn, "Whoever hath her wish, thou hast thy will"
-			to the words of Shakespeare's Sonnet. (Autor: Krzysztof Warzała)
-		</figcaption>
-	</figure>
-</div>
-
+<div className='up'>
+	<a href='#top'>![Back to top](../up.png)</a>
 </div>
 
 </div>
