add issue3 art5

--- a/issue7/article02/2022-02-24.mdx
+++ b/issue7/article02/2022-02-24.mdx
@@ -660,18 +660,18 @@ Sixty percent of the respondents agreed that multi-lingual artistes are more pop
 			</tr>
 		</tbody>
 	</table>
+	<span></span>
 </div>
 
 The data in _Table 3_ reveal that twenty-six percentage (26%) of the respondents believe that Yoruba and English as lingua franca are mostly combined in multi-lingual gospel songs, while twenty-three percentage (23%) of the respondents state that any of the above languages and Pidgin are the lingua franca, 20% agree that lingua franca are Igbo and English, 15% of the respondents opine that three or more combinations are the lingua franca which are mostly combined in multilingual gospel songs, 8% hold Hausa and English, and 7% Yoruba and Igbo, while 1% of the respondents declare Hausa and Igbo as lingua franca. The above result based on the best language combination shows that there is a situation where more than two languages are (functionally) used in society because several people know all or a combination of them which is known as Societal multilingualism. Mithen (2006) describes both language and music as “combinatorial systems” which contain acoustic elements such as words and tunes. According to Kuponiyi (2013) whose opinion about hip hop music in Nigeria can be adopted also as a common factor responsible for the twenty-six percentage (26%) of the respondents who chooses Yoruba and English as lingua franca mostly combined in multilingual gospel songs. He stated that:
 
 > Although Yoruba is just one of the three major languages in Nigeria, it is the most used by Nigerian hip hop artists. When we listen to Nigerian hip hop songs, we will discover that majority of the artists use Yoruba as part of their language(s) of composition. Not all these artists are Yoruba by origin; most of them acquired the language while growing up. (Kuponiyi 2013, 36)
-> ​
-> ​
-> ​Majority of the artists either find their way to the big cities like Lagos, Abuja where the majority of their fans resides or they were born and brought up in these cities just like hip hop artistes as asserted by Babalola and Taiwo (2009) that:
+
+​Majority of the artists either find their way to the big cities like Lagos, Abuja where the majority of their fans resides or they were born and brought up in these cities just like hip hop artistes as asserted by Babalola and Taiwo (2009) that:
 
 > While not all artists are Yoruba by origin, they have acquired the language while growing up in Lagos which is a major Yoruba city and the former capital of Nigeria. It is in Lagos that most hip-hop fans reside and most hip-hop activities take place. (Babalola and Taiwo 2009, 9-10)
-> ​
-> ​This assertion is also applicable to other musical genres which have brought development to the musical industries because these cities like Lagos have the highest convergence of people from different ethnic groups in Nigeria.
+
+​This assertion is also applicable to other musical genres which have brought development to the musical industries because these cities like Lagos have the highest convergence of people from different ethnic groups in Nigeria.
 
 <div className='figureBox'>
 
@@ -743,9 +743,11 @@ The data in _Table 3_ reveal that twenty-six percentage (26%) of the respondents
 	</tbody>
 </table>
 
+<span></span>
+
 </div>
 
-### MUSICAL EXAMPLES
+### Musical Examples
 
 <div className='figureBox'>
 	<figure>
