add issue3 arts4-8

--- a/blog/issue3/2018-02-27.md
+++ b/blog/issue3/2018-02-27.md
@@ -51,13 +51,13 @@ Hien Sié
 
 Natalia Viktorovna Sokovikova​
 
-[Read Online](/articles/issue3/function-and-structure-of-yoruba-songs-on-dental-health) [Download](https://drive.google.com/file/d/1VgEw2FExvPw6Gnbw-fuaDFFi4H8t9l1_/view?usp=sharing)
+[Read Online](/articles/issue3/gender-issues-and-embodiment-of-national-identity) [Download](https://drive.google.com/file/d/1VgEw2FExvPw6Gnbw-fuaDFFi4H8t9l1_/view?usp=sharing)
 
 #### Ballet for Children at the Serbian National Theatre in Novi Sad (1972-2017) [In Serbian]
 
 Svenka Savic
 
-[Read Online](/articles/issue3/function-and-structure-of-yoruba-songs-on-dental-health) [Download](https://drive.google.com/file/d/1T2tJFqkXT6aonjb-e7m11lFWkKP3GcMM/view?usp=sharing)
+[Read Online](/articles/issue3/baleti-za-decu-u-srpskom-narodnom-pozorištu) [Download](https://drive.google.com/file/d/1T2tJFqkXT6aonjb-e7m11lFWkKP3GcMM/view?usp=sharing)
 
 ### Modern Dance in Serbia
 
@@ -65,13 +65,13 @@ Svenka Savic
 
 Milos Marijan
 
-[Read Online](/articles/issue3/function-and-structure-of-yoruba-songs-on-dental-health) [Download](https://drive.google.com/file/d/18v9RwgZd0taqrB-CEEEgm6gP3l4Km_s4/view?usp=sharing)
+[Read Online](/articles/issue3/maga-magazinovic-the-main-concepts-of-modern-dance) [Download](https://drive.google.com/file/d/18v9RwgZd0taqrB-CEEEgm6gP3l4Km_s4/view?usp=sharing)
 
 #### Smiljana Mandukic (1908-1992): Beginning of Modern Dance and Dance Expressionism in Europe
 
 Vera Obradovic
 
-[Read Online](/articles/issue3/function-and-structure-of-yoruba-songs-on-dental-health) [Download](https://drive.google.com/file/d/1Qzc8wgBtxHM1zJiDmBw2mvdZ1wt68QhV/view?usp=sharing)
+[Read Online](/articles/issue3/smiljana-mandukic-the-beginning-of-modern-dance) [Download](https://drive.google.com/file/d/1Qzc8wgBtxHM1zJiDmBw2mvdZ1wt68QhV/view?usp=sharing)
 
 ### Dance Injury
 
